[gd_scene load_steps=4 format=2]

[ext_resource path="res://Options/Options.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Main Menu.tres" type="FontFile" id=2]
[ext_resource path="res://Fonts/Vol.tres" type="FontFile" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
offset_top = 1.0
offset_right = 1027.0
offset_bottom = 603.0

[node name="ScrollContainerP1" type="ScrollContainer" parent="Panel"]
offset_left = 632.0
offset_top = 127.0
offset_right = 843.0
offset_bottom = 295.0

[node name="VBoxContainerP1" type="VBoxContainer" parent="Panel/ScrollContainerP1"]
offset_right = 56.0
offset_bottom = 116.0

[node name="HBoxCont_P1move_right" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_right = 56.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_right"]
offset_top = 3.0
offset_right = 32.0
offset_bottom = 17.0
text = "Right"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_right"]
offset_left = 36.0
offset_right = 48.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P1move_left" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_top = 24.0
offset_right = 56.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_left"]
offset_top = 3.0
offset_right = 24.0
offset_bottom = 17.0
text = "Left"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_left"]
offset_left = 28.0
offset_right = 40.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P1_Down" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_top = 48.0
offset_right = 56.0
offset_bottom = 68.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Down"]
offset_top = 3.0
offset_right = 36.0
offset_bottom = 17.0
text = "Down"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Down"]
offset_left = 40.0
offset_right = 52.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P1_Jump" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_top = 72.0
offset_right = 56.0
offset_bottom = 92.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Jump"]
offset_top = 3.0
offset_right = 32.0
offset_bottom = 17.0
text = "Jump"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Jump"]
offset_left = 36.0
offset_right = 48.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P1_Attack" type="HBoxContainer" parent="Panel/ScrollContainerP1/VBoxContainerP1"]
offset_top = 96.0
offset_right = 56.0
offset_bottom = 116.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Attack"]
offset_top = 3.0
offset_right = 40.0
offset_bottom = 17.0
text = "Attack"

[node name="Button" type="Button" parent="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Attack"]
offset_left = 44.0
offset_right = 56.0
offset_bottom = 20.0
toggle_mode = true

[node name="ScrollContainerP2" type="ScrollContainer" parent="Panel"]
offset_left = 269.0
offset_top = 123.0
offset_right = 500.0
offset_bottom = 311.0

[node name="VBoxContainerP2" type="VBoxContainer" parent="Panel/ScrollContainerP2"]
offset_right = 56.0
offset_bottom = 116.0

[node name="HBoxCont_P2move_right" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_right = 56.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_right"]
offset_top = 3.0
offset_right = 32.0
offset_bottom = 17.0
text = "Right"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_right"]
offset_left = 36.0
offset_right = 48.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P2move_left" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_top = 24.0
offset_right = 56.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_left"]
offset_top = 3.0
offset_right = 24.0
offset_bottom = 17.0
text = "Left"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_left"]
offset_left = 28.0
offset_right = 40.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P2_Down" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_top = 48.0
offset_right = 56.0
offset_bottom = 68.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Down"]
offset_top = 3.0
offset_right = 36.0
offset_bottom = 17.0
text = "Down"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Down"]
offset_left = 40.0
offset_right = 52.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P2_Jump" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_top = 72.0
offset_right = 56.0
offset_bottom = 92.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Jump"]
offset_top = 3.0
offset_right = 32.0
offset_bottom = 17.0
text = "Jump"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Jump"]
offset_left = 36.0
offset_right = 48.0
offset_bottom = 20.0
toggle_mode = true

[node name="HBoxCont_P2_Attack" type="HBoxContainer" parent="Panel/ScrollContainerP2/VBoxContainerP2"]
offset_top = 96.0
offset_right = 56.0
offset_bottom = 116.0

[node name="Label" type="Label" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Attack"]
offset_top = 3.0
offset_right = 40.0
offset_bottom = 17.0
text = "Attack"

[node name="Button" type="Button" parent="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Attack"]
offset_left = 44.0
offset_right = 56.0
offset_bottom = 20.0
toggle_mode = true

[node name="Label" type="Label" parent="Panel"]
offset_left = 293.0
offset_top = 78.0
offset_right = 344.0
offset_bottom = 92.0
text = "Player 1"

[node name="Label2" type="Label" parent="Panel"]
offset_left = 675.0
offset_top = 81.0
offset_right = 726.0
offset_bottom = 95.0
text = "Player 2"

[node name="Main_menu" type="Button" parent="Panel"]
offset_left = 423.0
offset_top = 533.0
offset_right = 623.0
offset_bottom = 575.0
theme_override_fonts/font = ExtResource( 2 )
text = "Main menu"
icon_alignment = 1

[node name="Master" type="HSlider" parent="Panel"]
offset_left = 384.0
offset_top = 257.0
offset_right = 704.0
offset_bottom = 289.0
pivot_offset = Vector2( -246, 81 )
min_value = -80.0
max_value = 0.0

[node name="Music" type="HSlider" parent="Panel"]
offset_left = 384.0
offset_top = 289.0
offset_right = 704.0
offset_bottom = 321.0
pivot_offset = Vector2( -246, 81 )
min_value = -80.0
max_value = 0.0

[node name="SFX" type="HSlider" parent="Panel"]
offset_left = 383.0
offset_top = 321.0
offset_right = 703.0
offset_bottom = 352.0
pivot_offset = Vector2( -246, 81 )
min_value = -80.0
max_value = 0.0

[node name="Master_text" type="Label" parent="Panel"]
offset_left = 285.0
offset_top = 259.0
offset_right = 354.0
offset_bottom = 289.0
theme_override_fonts/font = ExtResource( 3 )
text = "Master"

[node name="Music_text" type="Label" parent="Panel"]
offset_left = 287.0
offset_top = 293.0
offset_right = 352.0
offset_bottom = 325.0
theme_override_fonts/font = ExtResource( 3 )
text = "Music"

[node name="SFX_text2" type="Label" parent="Panel"]
offset_left = 295.0
offset_top = 324.0
offset_right = 344.0
offset_bottom = 379.0
theme_override_fonts/font = ExtResource( 3 )
text = "SFX
"

[node name="language" type="Button" parent="Panel"]
offset_left = 384.0
offset_top = 359.0
offset_right = 640.0
offset_bottom = 383.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/language"]
visible = false
offset_top = 24.0
offset_right = 256.0
offset_bottom = 104.0

[node name="en" type="Button" parent="Panel/language/VBoxContainer"]
offset_right = 256.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 0, 24 )
text = "ENGLISH"

[node name="es" type="Button" parent="Panel/language/VBoxContainer"]
offset_top = 28.0
offset_right = 256.0
offset_bottom = 52.0
custom_minimum_size = Vector2( 0, 24 )
text = "ESPAÑOL"

[node name="fr" type="Button" parent="Panel/language/VBoxContainer"]
offset_top = 56.0
offset_right = 256.0
offset_bottom = 80.0
custom_minimum_size = Vector2( 0, 24 )
text = "Français"

[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_right/Button" to="." method="b_change_key_P2move_right"]
[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1move_left/Button" to="." method="b_change_key_P2move_left"]
[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Down/Button" to="." method="b_change_key_P2_Down"]
[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Jump/Button" to="." method="b_change_key_P2_Jump"]
[connection signal="pressed" from="Panel/ScrollContainerP1/VBoxContainerP1/HBoxCont_P1_Attack/Button" to="." method="b_change_key_P2_Attack"]
[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_right/Button" to="." method="b_change_key_P1move_right"]
[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2move_left/Button" to="." method="b_change_key_P1move_left"]
[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Down/Button" to="." method="b_change_key_P1_Down"]
[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Jump/Button" to="." method="b_change_key_P1_Jump"]
[connection signal="pressed" from="Panel/ScrollContainerP2/VBoxContainerP2/HBoxCont_P2_Attack/Button" to="." method="b_change_key_P1_Attack"]
[connection signal="pressed" from="Panel/Main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="value_changed" from="Panel/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Panel/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Panel/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="Panel/language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="Panel/language/VBoxContainer/en" to="." method="_on_en_pressed"]
[connection signal="pressed" from="Panel/language/VBoxContainer/es" to="." method="_on_es_pressed"]
[connection signal="pressed" from="Panel/language/VBoxContainer/fr" to="." method="_on_fr_pressed"]
